SoN-2-Kubernetes/06-trabalhando-com-o-ingress-do-nginx-e-cert-manager-no-kubernetes/trabalhando-ingress-nginx-certmanager-kubernates/ingress-rules.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: wildcard-dns
    certmanager.k8s.io/acme-challenge-type: dns01
    certmanager.k8s.io/acme-dns01-provider: cf-dns
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
    nginx.ingress.kubernetes.io/affinity: cookie
spec:
  tls:
    - hosts:
        - echo1.hackathonshift.com.br
        - echo2.hackathonshift.com.br
        - echo3.hackathonshift.com.br
      secretName: wildcard-dns
  rules:
    - host: echo1.hackathonshift.com.br
      http:
        paths:
          - backend:
              serviceName: echo1
              servicePort: 80
    - host: echo2.hackathonshift.com.br
      http:
        paths:
          - backend:
              serviceName: echo2
              servicePort: 80
    - host: echo3.hackathonshift.com.br
      http:
        paths:
          - backend:
              serviceName: echo3
              servicePort: 80
